Updated footer with not on opinions

--- a/themes/monopriv/layouts/partials/footer.html
+++ b/themes/monopriv/layouts/partials/footer.html
@@ -1,6 +1,7 @@
 <footer>
   <div class="container-fluid bg-dark text-white text-monospace text-center mt-2">
-    <small>{{.Site.Copyright | safeHTML }} Theme: <a class='text-warning' href="https://themes.gohugo.io/monopriv">Monopriv</a> | Crafted with <a class='text-warning' href="https://gohugo.io">Hugo</a></small>
+    <small> Any opinions expressed on this site are my own </small> </br>
+    <small>{{.Site.Copyright | safeHTML }} Theme: <a class='text-warning' href="https://themes.gohugo.io/monopriv">Derived from Monopriv</a> | Crafted with <a class='text-warning' href="https://gohugo.io">Hugo</a></small>
   </div>
   {{ if .Site.Params.analytics }}
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-M5XCESZV5Z"></script>
